# blog

./: .gitignore  README.md  build.py  gulpfile.js  lachlan-miller.me.conf  nginx.conf  package-lock.json  package.json  pyproject.toml  server.py
articles/identifying-diagnostic-regions-in-viruses/code/: adeno_f.py  categorize.py  consensus  entropy.py  get_ncbi.py  main.py  out  pyproject.toml
articles/identifying-diagnostic-regions-in-viruses/code/adenovirus_f_snippets/: OL409169.1.fasta  OP078715.1.fasta  OP078716.1.fasta  OP078718.1.fasta  OP078719.1.fasta  OP078729.1.fasta  OP078730.1.fasta  OP078732.1.fasta  OP078733.1.fasta  OP078734.1.fasta  OP078735.1.fasta  OP078736.1.fasta  OP078737.1.fasta  OP078738.1.fasta  OQ513436.1.fasta  OQ513437.1.fasta  OQ513438.1.fasta  OQ513439.1.fasta  OQ513440.1.fasta  OQ513441.1.fasta  OQ513442.1.fasta  OQ513443.1.fasta  OQ513444.1.fasta  OQ513445.1.fasta  OQ513446.1.fasta  OQ513447.1.fasta  OQ513448.1.fasta  OQ513449.1.fasta  OQ513450.1.fasta  OQ513451.1.fasta  OQ513452.1.fasta  OQ513453.1.fasta  OQ513454.1.fasta  OQ513455.1.fasta  PQ604903.1.fasta  PQ604904.1.fasta  PQ604905.1.fasta  PQ604906.1.fasta  PQ604907.1.fasta  PQ604908.1.fasta  (+142 more)
articles/identifying-diagnostic-regions-in-viruses/code/completed_genomes/: KY002683.1.fasta  KY002684.1.fasta  KY002685.1.fasta  LC215429.1.fasta  LC215433.1.fasta  LC215434.1.fasta  LC215435.1.fasta  LC215436.1.fasta  LC215437.1.fasta  MK241690.1.fasta  MK357714.1.fasta  MK357715.1.fasta  MK570618.1.fasta  MK570619.1.fasta  MT113942.1.fasta  MT113943.1.fasta  MT113944.1.fasta  MW306919.1.fasta  OL450401.1.fasta  PQ164815.1.fasta
articles/identifying-diagnostic-regions-in-viruses/code/data/: KY002683.1.txt  KY002684.1.txt  KY002685.1.txt  KY062614.1.txt  KY062615.1.txt  KY062616.1.txt  KY062617.1.txt  KY062618.1.txt  KY062619.1.txt  KY062620.1.txt  KY062621.1.txt  KY062622.1.txt  KY062623.1.txt  KY213688.1.txt  KY213689.1.txt  KY311565.1.txt  KY392940.1.txt  KY392941.1.txt  KY511618.1.txt  KY511619.1.txt  (+1386 more)
(+67 files in other folders)
