[tool.poetry]
name = "static-site"
version = "0.1.0"
description = ""
authors = ["Lachlan Miller <lachlan.miller.1990@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
markdown = "^3.7"
fastapi = {extras = ["standard"], version = "^0.115.6"}
jinja2 = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
