[tool.poetry]
name = "static-site"
version = "0.1.0"
description = ""
authors = ["Lachlan Miller <lachlan.miller.1990@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
markdown = "^3.7"
fastapi = {extras = ["standard"], version = "^0.115.6"}
jinja2 = "^3.1.5"
djhtml = "^3.0.7"
markdown-katex = "^202406.1035"
ruff = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
