[project]
name = "static-site"
version = "0.1.0"
description = ""
authors = [
    {name = "Lachlan Miller", email = "lachlan.miller.1990@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.7,<4.0",
    "fastapi[standard]>=0.115.6,<1.0",
    "jinja2>=3.1.5,<4.0",
    "djhtml>=3.0.7,<4.0",
    "markdown-katex>=202406.1035",
    "ruff>=0.9.4,<1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]
